--- a/client/src/components/card/card.style.scss
+++ b/client/src/components/card/card.style.scss
@@ -54,6 +54,7 @@
   width: 70%;
   z-index: 10;
 }
+
 .card__details {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -73,6 +74,23 @@
   font-style: italic;
   margin-top: -1rem;
   margin-bottom: 0.75rem;
+}
+.card__data {
+  font-size: 1.3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.card__data svg {
+  margin-right: 0.7rem;
+}
+.card__icon {
+  height: 2rem;
+  width: 2rem;
+  fill: #55c57a;
 }
 
 .card__footer {
