--- a/client/src/components/card/card.style.scss
+++ b/client/src/components/card/card.style.scss
@@ -53,6 +53,10 @@
   right: 2rem;
   width: 70%;
   z-index: 10;
+  span {
+    border-radius: 5px;
+    padding: 1rem .5rem;
+  }
 }
 
 .card__details {
