--- a/client/src/pages/Tour/tour.style.scss
+++ b/client/src/pages/Tour/tour.style.scss
@@ -64,6 +64,18 @@
   -ms-flex-pack: center;
   justify-content: center;
 }
+.heading-secondary {
+  font-size: 2.25rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#7dd56f),
+    to(#28b487)
+  );
+}
 .heading-box__detail {
   font-size: 1.5rem;
   font-weight: 700;
@@ -215,13 +227,13 @@
   width: 100%;
 }
 
-.marker {
-  background-image: url('../img/pin.png');
-  background-size: cover;
-  width: 32px;
-  height: 40px;
-  cursor: pointer;
-}
+// .marker {
+//   background-image: url('../../../public/img/pin.png');
+//   background-size: cover;
+//   width: 32px;
+//   height: 40px;
+//   cursor: pointer;
+// }
 
 .mapboxgl-popup {
   max-width: 25rem;
