--- a/client/src/pages/Login/login.style.scss
+++ b/client/src/pages/Login/login.style.scss
@@ -14,12 +14,18 @@
   box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.06);
   padding: 5rem 7rem;
   border-radius: 5px;
+
+  h2{
+    font-size: 4rem;
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .form__input {
   display: block;
   font-family: inherit;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   color: inherit;
   padding: 1.25rem 1.75rem;
   border: none;
@@ -53,7 +59,7 @@
 
 .form__label {
   display: block;
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: 700;
   margin-bottom: 0.75rem;
 }
