--- a/client/src/components/header/header.style.scss
+++ b/client/src/components/header/header.style.scss
@@ -73,6 +73,13 @@
   -ms-flex-pack: end;
   justify-content: flex-end;
 }
+.nav__user-img {
+  height: 3.5rem;
+  width: 3.5rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
 .nav__el,
 .nav__el:link,
 .nav__el:visited {
